...
  if (isDownloading) {
    return (
      <Button
        variant="outline"
        size="sm"
        disabled
        testID="quest-header-download"
      >
        <ActivityIndicator size="small" color={primaryColor} />
        <Text>{t('download')}</Text>
      </Button>
    );
  }
...
